# cg_sem7_cpp_version

./: .gitignore  CMakeLists.txt  create_gif.py  main.cpp
lib/include/: Canvas.h  Face3D.h  Polygon.h  Polyhedron.h  Vector2D.h  Vector3D.h
lib/source/: Canvas.cpp  Face3D.cpp  Polygon.cpp  Polyhedron.cpp  Vector2D.cpp  Vector3D.cpp
